SERVER-55557 Range deletion of aborted migration can fail after a refine shard key